commit on 'master'

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
       to avoid connecting the SDK to running emulators.
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-    <script defer src="main.js"></script>
     
   </head>
   <body>
+    <script src="main.js"></script>
     <h1>hi</h1>
 
 
