commit on 'master'

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--Import of firebase applications and link to css files (Dont touch it)-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Firebase Hosting</title>
-
+    <link rel="stylesheet" href="index.css">
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.6.2/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
@@ -26,7 +27,6 @@
   </head>
   <body>
     <script src="main.js"></script>
-    <h1>hi</h1>
 
 
     </script>
