--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,13 @@
         <i class="fa fa-bars"></i>
       </a>
     </div>
+    
+    <div style="padding-left:16px">
+      <h2>Responsive Topnav Example</h2>
+      <p>Resize the browser window to see how it works.</p>
+    </div>
+
     <script src="main.js"></script>
 
-
-    </script>
   </body>
 </html>
