--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
   </head>
-  
+
   <body>
     <!--Importing Bootstrap 5 libraries-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -42,7 +42,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!--Navigation Bar-->
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">Home</a>
+      <a href="#home" class="active" id="homelogo"><img src="/Assets/logo.png" height=70px ></a>
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
@@ -72,7 +72,11 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/Assets/therapy.jpg" alt="First slide">
+        <img class="d-block w-100" src="/Assets/therapy.jpg" alt="First slide" >
+        <div class="carousel-caption d-none d-md-block">
+          <h2>Your Mental Health deserves conversation.</h2>
+          <p>...</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="/Assets/therapy.jpg" alt="Second slide">
@@ -89,13 +93,6 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
-  <div class="carousel-item">
-    <img src="..." alt="...">
-    <div class="carousel-caption d-none d-md-block">
-      <h5>...</h5>
-      <p>...</p>
-    </div>
   </div>
   </body>
 </html>
