--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/Assets/therapy.jpg" alt="Second slide">
+        <img class="d-block w-100" src="/Assets/speech.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="/Assets/therapy.jpg" alt="Third slide">
